--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     {
       "name": "welefen",
       "email": "welefen@gmail.com"
+    },
+    {
+      "name": "hhdem",
+      "email": "liubingchina@gmail.com"
     }
   ],
   "main": "index.js",
